--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" href="../stylesheets/normalize.css">
     <link rel="stylesheet" href="../stylesheets/website.css">
+    <link rel="stylesheet" href="../stylesheets/skeleton.css">
     <!--[if lt IE 9]>
       <link rel="stylesheet" href="../stylesheets/ie.css">
     <![endif]-->
@@ -26,6 +27,63 @@
 
         <h1>BRIE.MARIE</h1>
         <h2>CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
+      </div>
+
+      <div id= "about-me-content">
+        <h2>I am a published poet turned creative coder, an art enthusiast and painter transforming personal aesthetic appeals into front-end web and mobile app design. I believe in inventing and reinventing myself often. When I was eleven, I trained myself to be left handed. I am a right-brain, big-picture thinker balancing the world of linear logic and reason. I am impassioned by efforts to reduce human trafficking, both locally and globally. I believe in dancing and laughing as much as possible. I love foggy mornings and espresso, making San Francisco and Seattle my two favorite cities.
+        </h2>
+
+        <img src="../website-pics/seattle_SF.png" id="cities"/>
+      </div>
+
+      <div id= "content">
+        <h2>As a part of Dev Bootcamp's curriculum, I completed a solo app challenge in just three nights. I developed a web app, Artsee, which consumes the Brooklyn Museum API to allow for quick art searches based on a desired artist. A future feature of the app will be the integration of a music API that cross references a chosen artwork's creation date and plays music that could have possibly inspired the artist while at work on the piece.<br />
+
+          <a id="artsee" href="https://github.com/briemarie/artsee">github.com/briemarie/artsee</a>
+        </h2>
+
+        <h2>In order to graduate Dev Bootcamp, groups completed larger scale apps in under a week. My team's app, Vendable, was developed using a Node.js back-end and an AngluarJS/Ionic front-end mobile iOS design. The app is meant to simplify the grocery shopping experience in a big city— complete with a MongoDB of over 100 thousand items found at big chain grocery stores, the app allows a user to find stores based on a 5 mile radius and create a shopping list of desired items found at a selected store. The list pulls the data and updates the user's list with item prices and and a grand total. When the user is ready, the app uses the Google Maps API to route directions to the chosen store.<br />
+
+          <a id="vendable" href="https://github.com/briemarie/Vendable">github.com/briemarie/Vendable</a>
+        </h2>
+
+        <h3 id="networks">FOR ADDITIONAL PROFESSIONAL INFORMATION, PLEASE CONNECT WITH ME THROUGH THE FOLLOWING NETWORKS:<br />
+          <a href="https://www.linkedin.com/pub/brittney-hodson/a3/237/123"><img class= "logo" src="../website-pics/linkedin.png" /></a><a href="https://github.com/briemarie"><img class= "logo" src="../website-pics/github.png"/></a><a href="https://twitter.com/briemarie5"><img class= "logo" src="../website-pics/twitter.png"/></a><a href="mailto:thebriemarie@gmail.com"><img class= "logo" src="../website-pics/gmail.png"/></a>
+        </h3>
+      </div>
+
+      <div id="content">
+        <div class="container">
+          <div class="row">
+            <div class="one-third column">
+              <img src="../website-pics/Dev-Bootcamp.png" id="dbc"/>
+            </div>
+            <div class="two-thirds column">
+              <h2>I graduated from Dev Bootcamp in San Francisco in January of 2015. I completed over 1000 hours of coding in the 18 week program, and feel confident and prepared to start work as a full-stack web and mobile app developer. Areas of focus included Ruby, server and client side Rails, Active Record, functional and OO JS, HTML5 and CSS3 design, single page apps with AJAX and jQuery, front-end AngularJS, and iOS mobile builds with Ionic.
+              </h2>
+            </div>
+          </div>
+          <div class="row">
+            <div class="two-thirds column">
+              <h2>I graduated with my BA in English from UC Berkeley in May of 2014. The emphasis of my studies was romantic and modern poetry, and I was awarded a spot in the Phi Beta Kappa Honor Society. While attending, I had four poems published in various literary magazines. I also helped found an all women's meditation group on campus, Fiat Lux for Women.
+              </h2>
+            </div>
+            <div class="one-third column">
+              <img src="../website-pics/ucberkeley.png" id="berkeley"/>
+            </div>
+          </div>
+          <div class="row">
+            <div class="one-third column">
+              <img src="../website-pics/Mira_Costa_College_Logo_4c.png" id="mcc"/>
+            </div>
+            <div class="two-thirds column">
+              <h2>I graduated from Mira Costa Community College in Oceanside, California with my AA in Social and Behavioral Sciences in May of 2012. The emphasis of my studies was in various areas of psychology, and I was awarded a spot in the Phi Theta Kappa Honor Society. I had my first poem published in a local literary magazine, and volunteered many hours helping with community activities sponsored by the astronomy department.
+              </h2>
+            </div>
+          </div>
+            <h2>* Fun fact about my education: I was homeschooled for most of my primary and secondary schooling, and graduated high school when I was sixteen.
+            </h2>
+        </div>
       </div>
 
       <div id="footer">
