--- a/index.html
+++ b/index.html
@@ -66,37 +66,66 @@
       <section class="education" id="education">
         <div id="content">
           <h1 class="scarlett">BRIE.MARIE.EDUCATION</h1>
-          <div class="container">
+
+          <div class="container-fluid">
             <div class="row">
-              <div class="one-third column">
-                <img src="../website-pics/Dev-Bootcamp.png" id="dbcimg"/>
+              <div class="col-md-4">
+                <img src="../website-pics/Dev-Bootcamp.png" id="dbcimg" data-toggle="modal" data-target="#dbc"/>
+                <div class="modal fade" id="dbc" aria-hidden="true">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
+                        <h2 class="modal-title">Dev Bootcamp</h2>
+                      </div>
+                      <div class="modal-body">
+                        <h2>I graduated from Dev Bootcamp in San Francisco in January of 2015. I completed over 1000 hours of coding in the 18 week program, and feel confident and prepared to start work as a full-stack web and mobile app developer. Areas of focus included Ruby, server and client side Rails, Active Record, functional and OO JS, HTML5 and CSS3 design, single page apps with AJAX and jQuery, front-end AngularJS, and iOS mobile builds with Ionic.
+                        </h2>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
-              <div class="two-thirds column">
-                <h2>I graduated from Dev Bootcamp in San Francisco in January of 2015. I completed over 1000 hours of coding in the 18 week program, and feel confident and prepared to start work as a full-stack web and mobile app developer. Areas of focus included Ruby, server and client side Rails, Active Record, functional and OO JS, HTML5 and CSS3 design, single page apps with AJAX and jQuery, front-end AngularJS, and iOS mobile builds with Ionic.
-                </h2>
+              <div class="col-md-4">
+              <img src="../website-pics/ucberkeley.png" id="berkeleyimg" data-toggle="modal" data-target="#ucb"/>
+                <div class="modal fade" id="ucb" aria-hidden="true">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
+                        <h2 class="modal-title">University of California, Berkeley</h2>
+                      </div>
+                      <div class="modal-body">
+                        <h2>I graduated with my BA in English from UC Berkeley in May of 2014. The emphasis of my studies was romantic and modern poetry, and I was awarded a spot in the Phi Beta Kappa Honor Society. While attending, I had four poems published in various literary magazines. I also helped found an all women's meditation group on campus, Fiat Lux for Women.
+                        </h2>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <img src="../website-pics/Mira_Costa_College_Logo_4c.png" id="mccimg"data-toggle="modal" data-target="#mcc"/>
+                <div class="modal fade" id="mcc" aria-hidden="true">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
+                        <h2 class="modal-title">Mira Costa Community College</h2>
+                      </div>
+                      <div class="modal-body">
+                        <h2>I graduated from Mira Costa Community College in Oceanside, California with my AA in Social and Behavioral Sciences in May of 2012. The emphasis of my studies was in various areas of psychology, and I was awarded a spot in the Phi Theta Kappa Honor Society. I had my first poem published in a local literary magazine, and volunteered many hours helping with community activities sponsored by the astronomy department.
+                        </h2>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
-            <div class="row">
-              <div class="two-thirds column">
-                <h2>I graduated with my BA in English from UC Berkeley in May of 2014. The emphasis of my studies was romantic and modern poetry, and I was awarded a spot in the Phi Beta Kappa Honor Society. While attending, I had four poems published in various literary magazines. I also helped found an all women's meditation group on campus, Fiat Lux for Women.
-                </h2>
-              </div>
-              <div class="one-third column">
-                <img src="../website-pics/ucberkeley.png" id="berkeleyimg"/>
-              </div>
-            </div>
-            <div class="row">
-              <div class="one-third column">
-                <img src="../website-pics/Mira_Costa_College_Logo_4c.png" id="mccimg"/>
-              </div>
-              <div class="two-thirds column">
-                <h2>I graduated from Mira Costa Community College in Oceanside, California with my AA in Social and Behavioral Sciences in May of 2012. The emphasis of my studies was in various areas of psychology, and I was awarded a spot in the Phi Theta Kappa Honor Society. I had my first poem published in a local literary magazine, and volunteered many hours helping with community activities sponsored by the astronomy department.
-                </h2>
-              </div>
-            </div>
-              <h2>* Fun fact about my education: I was homeschooled for most of my primary and secondary schooling, and graduated high school when I was sixteen.
-              </h2>
           </div>
+
+          <h2>* Fun fact about my education: I was homeschooled for most of my primary and secondary schooling, and graduated high school when I was sixteen.
+          </h2>
+
         </div>
       </section>
     </div>
