--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
           <h2>As a part of Dev Bootcamp's curriculum, I completed a solo app challenge in just three nights. I developed a web app, Artsee, which consumes the Brooklyn Museum API to allow for quick art searches based on a desired artist. A future feature of the app will be the integration of a music API that cross references a chosen artwork's creation date and plays music that could have possibly inspired the artist while at work on the piece.<br />
 
             <p id="artseeimg"></p>
-            <!-- <img src="../website-pics/artsee.png"/> -->
             <a id="artsee" href="https://github.com/briemarie/artsee">github.com/briemarie/artsee</a>
           </h2>
 
           <h2>In order to graduate Dev Bootcamp, groups completed larger scale apps in under a week. My team's app, Vendable, was developed using a Node.js back-end and an AngluarJS/Ionic front-end mobile iOS design. The app is meant to simplify the grocery shopping experience in a big city— complete with a MongoDB of over 100 thousand items found at big chain grocery stores, the app allows a user to find stores based on a 5 mile radius and create a shopping list of desired items found at a selected store. The list pulls the data and updates the user's list with item prices and and a grand total. When the user is ready, the app uses the Google Maps API to route directions to the chosen store.<br />
 
+            <p id="vendableimg"></p>
             <a id="vendable" href="https://github.com/briemarie/Vendable">github.com/briemarie/Vendable</a>
           </h2>
 
