--- a/index.html
+++ b/index.html
@@ -25,17 +25,19 @@
         </h3>
       </div>
 
-      <div id= "content">
-        <div id="venn">
-          <div class="circle left-circle">ARTS</div>
-          <div class="circle right-circle">TECH</div>
-        </div>
-        <hr>
-        <div class="magic">MAGIC</div>
+      <section class="landing" id="landing">
+        <div id= "content">
+          <div id="venn">
+            <div class="circle left-circle">ARTS</div>
+            <div class="circle right-circle">TECH</div>
+          </div>
+          <hr>
+          <div class="magic">MAGIC</div>
 
-        <h1>BRIE.MARIE</h1>
-        <h2>CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
-      </div>
+          <h1>BRIE.MARIE</h1>
+          <h2>CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
+        </div>
+      </section>
 
       <section class="about-me" id="about-me">
         <div id= "about-me-content">
